--- a/inicio.html
+++ b/inicio.html
@@ -37,15 +37,15 @@
   <figure class="icon-cards mt-3">
   <div class="icon-cards__content">
     <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">
-      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo1.jpg"></a>
+      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo1.jpg"><h2 class="textito">Cerveza 1</h2></a>
+    </span>
+  </div>
+    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">
+      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo2.jpg"><h2 class="textito">Cerveza 2</h2></a>
     </span>
     </div>
     <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">
-      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo2.jpg"></a>
-    </span>
-    </div>
-    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">
-      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo3.jpg"></a>
+      <a href=""><img class="d-block w-100" src="imagenes/fotoEjemplo3.jpg"><h2 class="textito">Cerveza 3</h2></a>
     </span>
     </div>
   </div>
